# frust

./: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
migrations/2023-08-31-174445_create_feeds/: up.sql
src/: lib.rs  main.rs  schema.rs
src/api/v1/: feed.rs  health.rs  mod.rs
src/handlers/: hello_world.rs
src/jobs/: feed.rs
src/models/: feed.rs  mod.rs
src/services/: feed.rs
