[package]
name = "frust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
env_logger = "0.10.0"
serde_json = "1.0.105"
cronjob = "0.4.17"
reqwest = { version = "0.11.20", features = ["blocking"] }
diesel = { version = "2.1.1", features = ["postgres"] }
serde = { version = "1.0.188", features = ["derive"] }
utoipa = { version = "3.5.0", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }